[gd_scene load_steps=10 format=3 uid="uid://c0jhf07rg4s53"]

[ext_resource type="Theme" uid="uid://bihy5f3ktx2ep" path="res://scenes/ui/game_ui_theme.tres" id="1_5slcd"]
[ext_resource type="Script" uid="uid://blvon3n84seq1" path="res://scenes/ui/game_menu_screen.gd" id="1_l5nq4"]
[ext_resource type="PackedScene" uid="uid://dlao4i2bgor4m" path="res://audio/music/main_menu.tscn" id="2_dl6il"]
[ext_resource type="PackedScene" uid="uid://cwjmy3ftymrgt" path="res://scenes/components/mouse_cursor_component.tscn" id="2_ecc0l"]
[ext_resource type="PackedScene" uid="uid://bwpjg1xctorjm" path="res://scenes/ui/game_menu_screen_background.tscn" id="2_vrg0q"]
[ext_resource type="Texture2D" uid="uid://8xy0ihptpv0q" path="res://assets/ui/mouse_icon.png" id="3_16g87"]
[ext_resource type="AudioStream" uid="uid://ubpn0poisjum" path="res://assets/audio/music/menu_tema_gaucho.ogg" id="3_t2wrn"]
[ext_resource type="PackedScene" uid="uid://dr3smv1anlysx" path="res://audio/sfx/click.tscn" id="6_16g87"]
[ext_resource type="PackedScene" uid="uid://dm0b3x3phtxqx" path="res://audio/sfx/hover.tscn" id="7_dl6il"]

[node name="GameMenuScreen" type="CanvasLayer"]
script = ExtResource("1_l5nq4")

[node name="MainMenu" parent="." instance=ExtResource("2_dl6il")]
stream = ExtResource("3_t2wrn")

[node name="Click" parent="." instance=ExtResource("6_16g87")]

[node name="Hover" parent="." instance=ExtResource("7_dl6il")]

[node name="MouseCursorComponent" parent="." instance=ExtResource("2_ecc0l")]
cursor_component_texture = ExtResource("3_16g87")

[node name="GameMenuScreenBackground" parent="." instance=ExtResource("2_vrg0q")]

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_5slcd")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8

[node name="Label" type="Label" parent="MarginContainer/MarginContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.458824, 0.298039, 0.376471, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 3
theme_override_font_sizes/font_size = 36
text = "PATH TO ENGLISH:
        GAÃšCHO EDITION"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="StartGameButton" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 29)
layout_mode = 2
theme_type_variation = &"GameMenuButton"
text = "START"

[node name="SaveGameButton" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 29)
layout_mode = 2
theme_type_variation = &"GameMenuButton"
text = "SAVE"

[node name="ExitGameButton" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 29)
layout_mode = 2
theme_type_variation = &"GameMenuButton"
text = "EXIT"

[connection signal="pressed" from="MarginContainer/VBoxContainer/StartGameButton" to="." method="_on_start_game_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/SaveGameButton" to="." method="_on_save_game_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ExitGameButton" to="." method="_on_exit_game_button_pressed"]
